<resources>
    <string name="app_name">Safe and Secure</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="safe_and_secure">Safe and Secure</string>
    <string name="simply_software_solutions">Simply Software Solutions</string>
    <string name="create_new">Create New</string>
    <string name="edit_existing">Edit Existing</string>
    <string name="view_website_list">View Website List</string>
    <string name="security_reports">Security Reports</string>
    <string name="enter_website_name">Enter Website Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_additional_info">Enter Additional Info</string>
    <string name="password_generates_here">Password Generates Here</string>
    <string name="c">C</string>
    <string name="o">O</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="login">Login</string>
    <string name="help_button">Help Button</string>
    <string name="help">Help</string>
    <string name="enterpasscode">Enter Pass Code</string>
    <string name="confirmpc">Confirm Pass Code</string>
    <string name="btnconfirm">Confirm</string>
    <string name="save_button">Save Button</string>
    <string name="save">Save</string>
    <string name="list_of_websites">List of Websites</string>
    <string name="search_for_a_website">Search for a website</string>
    <string name="website_list">Website List</string>
    <string name="delete_button">Delete Button</string>
    <string name="delete">Delete</string>
    <string name="edit_button">Edit Button</string>
    <string name="edit">Edit</string>
    <string name="list_of_security_issues">List of security issues</string>
    <string name="very_weak_image">Very weak image</string>
    <string name="very_weak">very Weak</string>
    <string name="very_weak_text">Very Weak Text</string>
    <string name="count">Count</string>
    <string name="very_weak_count_text">Very Weak count Text</string>
    <string name="weak_image">Weak Image</string>
    <string name="weak">Weak</string>
    <string name="weak_image_text">Weak Image Text</string>
    <string name="reset_the_report_list">Reset the report List</string>
    <string name="reset">Reset</string>
    <string name="medium_image">Medium Image</string>
    <string name="strong_image">Strong Image</string>
    <string name="very_strong_image">Very Strong Image</string>
    <string name="medium">Medium</string>
    <string name="medium_image_text">Medium Image Text</string>
    <string name="strong">Strong</string>
    <string name="strong_image_text">Strong Image Text</string>
    <string name="very_strong">Very Strong</string>
    <string name="very_strong_image_text">Very Strong Image Text</string>
    <string name="weak_count_text">Weak Count Text</string>
    <string name="medium_count_text">Medium Count Text</string>
    <string name="strong_count_text">Strong Count Text</string>
    <string name="very_strong_count_text">Very Strong Count Text</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="generate_password">Generate Password</string>
    <string name="generate">Generate</string>
    <string name="notification">Notification</string>
    <string name="enter_pass_code">Enter Pass Code</string>
    <string name="notifications">Notifications.</string>
    <string name="upgrade_to_premium_for_more_storage">Upgrade to premium for more storage.</string>
    <string name="you_haven_t_scanned_re_used_passwords_for_30_days">You haven\'t scanned re-used passwords for 30 days!</string>
    <string name="you_haven_t_scanned_expired_passwords_for_30_days">You haven\'t scanned expired passwords for 30 days!</string>
    <string name="you_scanned_password_strength_in_30_days">You scanned password strength in 30 days!</string>
    <string name="reusedreportupdate">Re-used password report is up to date.</string>
    <string name="expiredreportupdate">Expired password report is up to date.</string>
    <string name="strengthreportupdate">Password strength report is up to date.</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_existing">Enter Existing</string>
    <string name="copy_password">Copy Password</string>
    <string name="you_haven_t_scanned_password_strength_in_30_days">You haven\'t scanned password strength in 30 days.</string>
    <string name="backup">Backup</string>
</resources>