<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create_new"
            android:title="@string/create_new" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/enter_existing" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_view_list"
            android:title="@string/website_list" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_security_report"
            android:title="@string/security_reports" />

        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/frequently_asked_questions" />
    </group>
</menu>