<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <EditText
        android:id="@+id/WebsiteNameText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/enter_website_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#64DD17"
        android:textColorHint="#000000"
        android:textColorLink="#64DD17"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHighlight="#64DD17"
        android:textColorHint="#000000"
        android:textColorLink="#64DD17"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WebsiteNameText"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/AdditionalInfoText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/enter_additional_info"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#64DD17"
        android:textColorHint="#000000"
        android:textColorLink="#64DD17"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailText"
        app:layout_constraintVertical_bias="0.015" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/password_generates_here"
        android:inputType="textVisiblePassword"
        android:textColor="#000000"
        android:textColorHighlight="#64DD17"
        android:textColorHint="#000000"
        android:textColorLink="#64DD17"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdditionalInfoText"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/BtnEdit"
        android:theme="@style/Theme.AppCompat.Button_Theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_button"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/BtnSave"
        android:theme="@style/Theme.AppCompat.Button_Theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/BtnEdit"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/BtnDelete"
        android:theme="@style/Theme.AppCompat.Button_Theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_button"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toEndOf="@+id/BtnSave"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/BtnHelp"
        android:theme="@style/Theme.AppCompat.Button_Theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/help_button"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnEdit"
        app:layout_constraintVertical_bias="0.042"/>

</androidx.constraintlayout.widget.ConstraintLayout>